@@ -1,5 +1,9 @@
 2008-05-31  Bruno Haible  <bruno@clisp.org>
 
+	* m4/c++-constructors.m4: Remove file.
+
+2008-05-31  Bruno Haible  <bruno@clisp.org>
+
 	* configure.in: Remove CL_ACCESSFLAGS invocation.
 	* m4/access.m4: Remove file.
 	* unix.d: Assume <unistd.h> declares R_OK, W_OK, X_OK.
